Display Saved User Colors as Icons, Change App Colors on Click.

--- a/slack/src/components/App.css
+++ b/slack/src/components/App.css
@@ -42,3 +42,23 @@ body,
 .progress__bar {
   margin: 0.3em 0 0 0 !important;
 }
+
+/* ColorPanel.js */
+.color__container {
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  width: 35px;
+  border-radius: 3px;
+}
+
+.color__square {
+  width: 35px;
+  height: 35px;
+}
+
+.color__overlay {
+  width: 85px;
+  height: 35px;
+  transform: rotate(225deg);
+}
